# establishment-charts

./: .env.example  Cargo.toml
backend/: Cargo.toml
backend/src/: main.rs
backend/src/model/: mod.rs
backend/src/repository/: mod.rs
frontend/: eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.tsx  globals.css  index.css  main.tsx
frontend/src/components/ui/: separator.tsx
frontend/src/layout/: chart-with-settings.tsx  index.tsx
frontend/src/navigation/: context.tsx  index.tsx  menu.tsx
frontend/src/pages/establishments-by/: chart.tsx  index.tsx  settings.tsx
frontend/src/services/: api.ts  establishments_amount_by.ts  establishments_summary.ts
sql/: seed.sql
sql/entities/: address.sql  establishment.sql
src/: lib.rs  main.rs
src/model/: mod.rs
src/queries/: distinct_states.rs  distinct_states.sql  establishments_amount_by.rs  establishments_amount_by.sql  establishments_summary.rs  establishments_summary.sql  mod.rs
src/repository/: mod.rs
