[package]
name = "establishment_charts"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
postgres-types = { version = "0.2.9", features = ["derive"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio-postgres = "0.7.13"
